Config Devel Modul und Anfang des Migrate Modules für JSON Import für Franke und Bornberg

--- a/modules/custom/fb_json_import/fb_json_import.info.yml
+++ b/modules/custom/fb_json_import/fb_json_import.info.yml
@@ -3,3 +3,7 @@ type: module
 description: JSON Import with Migrate module
 core: 8.x
 package: franke_bornberg
+
+config_devel:
+ install:
+   - migrate_plus.migration.fb_persons
