--- a/modules/custom/fb_json_import/config/install/migrate_plus.migration.fb_persons.yml
+++ b/modules/custom/fb_json_import/config/install/migrate_plus.migration.fb_persons.yml
@@ -5,7 +5,7 @@ migration_group: Persons
 migration_dependencies: {}
 
 source:
-  plugin: json
+  plugin: url
   data_fetcher_plugin: file
   data_parser_plugin: json
   path: /data/test_data.json
