--- a/sites/default/config_swYLHyXzwh9zhsFIxS6QSKpxK0Ea1x2EMp436zOf02JWSapL-bdf10E62dj3JOAIxL3dJHGw7g/sync/core.extension.yml
+++ b/sites/default/config_swYLHyXzwh9zhsFIxS6QSKpxK0Ea1x2EMp436zOf02JWSapL-bdf10E62dj3JOAIxL3dJHGw7g/sync/core.extension.yml
@@ -1,5 +1,6 @@
 module:
   admin_toolbar: 0
+  admin_toolbar_tools: 0
   automated_cron: 0
   block: 0
   block_content: 0
@@ -8,12 +9,15 @@ module:
   color: 0
   comment: 0
   config: 0
+  config_devel: 0
   contact: 0
   contextual: 0
   datetime: 0
   dblog: 0
+  devel: 0
   dynamic_page_cache: 0
   editor: 0
+  fb_json_import: 0
   field: 0
   field_ui: 0
   file: 0
@@ -21,6 +25,7 @@ module:
   help: 0
   history: 0
   image: 0
+  kint: 0
   language: 0
   link: 0
   locale: 0
@@ -30,6 +35,7 @@ module:
   migrate_tools: 0
   node: 0
   options: 0
+  outside_in: 0
   page_cache: 0
   path: 0
   quickedit: 0
