Config exportiert. Ist nur die importierte Config für die Migration

--- a/modules/custom/fb_json_import/config/install/migrate_plus.migration.fb_persons.yml
+++ b/modules/custom/fb_json_import/config/install/migrate_plus.migration.fb_persons.yml
@@ -14,7 +14,7 @@ source:
   ids:
     id:
       type: integer
-  item_selector: persons
+  item_selector: persons/
   fields:
     - id
     - first_name
